added all docs and updated links

--- a/license.html
+++ b/license.html
@@ -344,7 +344,7 @@
   data-button-type="tertiary"
 >
   <a
-    href="https://www.defensivepatentlicense.org/s/DPL-11.pdf"
+    href="s/DPL-11.pdf"
     class="sqs-block-button-element--small sqs-button-element--tertiary sqs-block-button-element"
     target="_blank"
   >
@@ -361,7 +361,7 @@
   data-button-type="tertiary"
 >
   <a
-    href="https://www.defensivepatentlicense.org/s/DPL-11.docx"
+    href="s/DPL-11.docx"
     class="sqs-block-button-element--small sqs-button-element--tertiary sqs-block-button-element"
     target="_blank"
   >
